internal/gatewayapi/testdata/httproute-with-invalid-backend-ref-service-import-no-endpoint-slice.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - matches:
            - path:
                type: Exact
                value: "/exact"
          backendRefs:
            - group: multicluster.x-k8s.io
              kind: ServiceImport
              name: service-import-not-exist-endpoint-slice
              port: 8080
serviceimports:
  - apiVersion: multicluster.x-k8s.io/v1alpha1
    kind: ServiceImport
    metadata:
      namespace: default
      name: service-import-not-exist-endpoint-slice
    spec:
      type: ClientIP
      ips:
        - "2.2.2.2"
      ports:
        - port: 8080
          name: http
          protocol: TCP
